# Vypyr

./: .gitignore  README.md  pyproject.toml  startup.py
jupyter/.ipynb_checkpoints/: startup-checkpoint 2.ipynb  vyper-checkpoint 3.ipynb
jupyter/Bioinformatics/.ipynb_checkpoints/: Biostats-checkpoint 2.ipynb
src/charactyr/: main.py
src/charactyr/characters/: CALEB 2.json  CALEB.json  CIEL.json  HAILEY 2.json  HAILEY.json  JEVIN.json
src/contryvere/: main.py  organic_chemistry.html
src/kemist/: __init__.py  __main__.py  main.py  main_backup.py
src/medulla/: main.py
src/scholyr/: main.py  scholyr_pythonista.py  setup.py
src/shyft/: .MANIFEST.in  .README.md  .pyproject.toml  .setup.cfg  .setup.py  __init__.py  __main__.py  data.json  gui.py  main.py  setup.py
src/shyft/.ipynb_checkpoints/: gui-checkpoint.py
src/tymyr/: README.md  home.ipynb  main.py
src/tymyr/.ipynb_checkpoints/: home-checkpoint.ipynb
