[tool.poetry]
name = "vypyr"
version = "0.0.2"
description = ""
authors = ["K. LeBryce <k.lebryce@pm.me>"]
readme = "README.md"
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2024.0.0"
matplotlib = "^3.8.4"
py2app = "^0.28.8"
numpy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "src"
